[package]
name = "transvoxel"
version = "0.6.0"
authors = ["Seb E. <seb@nospam.org>"]
edition = "2018"
resolver = "2"
license = "MIT OR Apache-2.0"
description = "Implementation of Eric Lengyel's Transvoxel Algorithm"
repository = "https://github.com/Gnurfos/transvoxel_rs"
categories = ["algorithms", "game-development", "graphics"]
keywords = ["gamedev", "voxel", "transvoxel", "marching-cubes", "isosurface"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tvxl_docsrs"]
features = ["bevy_mesh"]

[badges]
maintenance = { status = "experimental" }

[features]
default = ["serde"]
bevy_mesh = ["bevy", "bytemuck"]

[dependencies]
flagset = "0.4"
num = "0.4"
transvoxel-data = "0.2"
serde = { version = "1.0", optional = true, features = ["derive"] }
bevy = { version = "0.10", optional = true }
bytemuck = { version = "1.13", optional = true }

[dev-dependencies]
hamcrest = "0.1"
ndarray = "0.15"
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_egui = "0.20.2"
#bevy_screen_diags = "0.4.0"
noise = "0.8.2"
rand = "0.8.5"

[profile.dev]
opt-level = 3

[[example]]
name = "single_block"
required-features = ["bevy_mesh"]

[[example]]
name = "transition_across_blocks"
required-features = ["bevy_mesh"]
